kanc/src/tests/sample_code/should_fail/single_file/illegal_recursion/rec_fun_non_ident.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let x = fun x(-a: Nat, b: Nat): Nat {
    x(Nat.o, b)
};
